<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <!-- 第二层布局 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_layout_margin"
        android:layout_marginRight="@dimen/default_layout_margin"
        android:orientation="vertical" >

<!--         <View
            android:id="@+id/transparentView"
            android:layout_width="wrap_content"
            android:layout_height="43.5dp" /> -->
            
        
        <!-- 这里开始不透明部分 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_frame"
            android:orientation="vertical" >
            <ImageView
		        android:id="@+id/logo"
		        android:layout_width="match_parent"
		        android:layout_height="67dp"
		        android:layout_centerHorizontal="true"
		        android:background="@drawable/z_logo2"
		        android:scaleType="centerInside"
		        android:padding="10dp"
		        android:layout_marginLeft="50dp"
		        android:layout_marginRight="50dp"
		        android:layout_marginBottom="10dp" />

            <!-- 不透明View -->

<!--             <View
                android:id="@+id/untransparent"
                android:layout_width="wrap_content"
                android:layout_height="43.5dp"
                android:visibility="invisible" /> -->

            <!-- 账号 -->

            <LinearLayout
                style="@style/zBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_layout_frame"
                android:orientation="horizontal" >

                <TextView
                    style="@style/zIconBase"
                    android:layout_width="@dimen/default_icon_size"
                    android:layout_height="@dimen/default_icon_size"
                    android:background="@drawable/z_account" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/defaut_et_hight"
                    android:layout_gravity="center_vertical"
                    android:background="@color/default_et_background"
                    android:hint="@string/et_account_default"
                    android:singleLine="true"
                    android:layout_weight="1"
                    android:textSize="@dimen/default_et_text_size"
                    android:textColor="@color/default_et_text" />
                
                <TextView
                    android:id="@+id/showMore"
                    style="@style/zIconBase"
                    android:layout_width="@dimen/default_icon_lehgth"
                    android:layout_height="@dimen/default_icon_size"
                    android:background="@drawable/z_more" 
                    />
            </LinearLayout>

            <!-- 密码 -->

            <LinearLayout
                android:id="@+id/etLayout"
                style="@style/zBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_layout_frame"
                android:orientation="horizontal" >

                <TextView
                    style="@style/zIconBase"
                    android:layout_width="@dimen/default_icon_size"
                    android:layout_height="@dimen/default_icon_size"
                    android:background="@drawable/z_passwd_login" />

                <EditText
                    android:id="@+id/et_passwd"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/defaut_et_hight"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@color/default_et_background"
                    android:hint="@string/et_passwd_default"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/default_et_text_size"
                    android:textColor="@color/default_et_text" />

                <TextView
                    android:id="@+id/passwdStatus"
                    style="@style/zIconBase"
                    android:layout_width="@dimen/default_icon_lehgth"
                    android:layout_height="@dimen/default_icon_size"
                    android:background="@drawable/z_eye_close" />
            </LinearLayout>

            <!-- 忘记密码 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/alige"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/changePasswd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_layout_margin"
                    android:layout_marginStart="@dimen/default_layout_margin"
                    android:gravity="start"
                    android:text="@string/btn_change_passwd"
                    android:textSize="@dimen/small_bt_text_size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/forgetPasswd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_layout_margin"
                    android:layout_marginRight="@dimen/default_layout_margin"
                    android:gravity="end"
                    android:text="@string/btn_forget_passwd"
                    android:textSize="@dimen/small_bt_text_size" />
            </LinearLayout>

            <!-- 立即登录 -->


            <!-- wanghc +padding  btnBase -->

            <TextView
                android:id="@+id/loginBtn"
                style="@style/zBtBase"
                android:layout_width="match_parent"
                android:layout_height="@dimen/defaut_bt_hight"
                android:background="@drawable/login_btn_frame"
                android:text="@string/btn_login_func"
                android:textColor="@color/default_button_white" />

            <!-- 两个按钮一组 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/quickLogin"
                    style="@style/zBtBase"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/defaut_bt_hight"
                    android:layout_marginEnd="@dimen/btn_margin_left_right"
                    android:layout_marginRight="@dimen/btn_margin_left_right"
                    android:text="@string/btn_quick_login_func" />

                <TextView
                    android:id="@+id/register"
                    style="@style/zBtBase"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/defaut_bt_hight"
                    android:layout_marginLeft="@dimen/btn_margin_left_right"
                    android:layout_marginStart="@dimen/btn_margin_left_right"
                    android:text="@string/btn_register" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- logo 不做其他处理 -->

    

</RelativeLayout>